# jedi

./: README.en.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
public/: screenshot.md
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json
src-tauri/config/: hosts.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/api/: app.rs  dns.rs  hosts.rs  mod.rs  os.rs
src-tauri/src/config/: app.rs
src-tauri/src/utils/: helper.rs  logger.rs  mod.rs
src/api/: app.ts  hosts.ts  index.ts
src/assets/: style.css  theme.css
src/assets/css/: animations.css
src/components/: HostsResolver.refactored.vue  HostsResolver.vue
src/components/common/: SystemInfoBar.vue
src/components/dialogs/: AboutDialog.vue  HelpDialog.vue  SettingsDialog.vue
src/components/hosts/: index.ts
src/components/hosts/common/: EmptyState.vue  GlobalSwitchFab.vue  GroupManager.refactored.vue  GroupManager.vue  HeaderSection.vue  NotificationSnackbar.vue
src/components/hosts/dialogs/: AddGroupDialog.vue  AddHostDialog.vue  DeleteConfirmDialog.vue  EditHostDialog.vue
src/components/hosts/tables/: HostsTable.vue
src/components/layout/: AppFooter.vue  AppSidebar.vue
src/composables/: useStorage.ts  useTheme.ts
src/plugins/: vuetify.ts
src/services/: hostsService.refactored.ts  hostsService.ts
src/types/: hosts.ts  os.ts
src/utils/: hostsUtils.refactored.ts  hostsUtils.ts
